--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,70 +1,99 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@inproceedings{DBLP:conf/nips/ZhangTLLK0020,
+  author    = {Xueru Zhang and
+               Ruibo Tu and
+               Yang Liu and
+               Mingyan Liu and
+               Hedvig Kjellstr{\"{o}}m and
+               Kun Zhang and
+               Cheng Zhang},
+  editor    = {Hugo Larochelle and
+               Marc'Aurelio Ranzato and
+               Raia Hadsell and
+               Maria{-}Florina Balcan and
+               Hsuan{-}Tien Lin},
+  title     = {How do fair decisions fare in long-term qualification?},
+  booktitle = {Advances in Neural Information Processing Systems 33: Annual Conference
+               on Neural Information Processing Systems 2020, NeurIPS 2020, December
+               6-12, 2020, virtual},
+  year      = {2020},
+  url       = {https://proceedings.neurips.cc/paper/2020/hash/d6d231705f96d5a35aeb3a76402e49a3-Abstract.html},
+  timestamp = {Fri, 04 Dec 2020 15:22:44 +0100},
+  biburl    = {https://dblp.org/rec/conf/nips/ZhangTLLK0020.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{DBLP:conf/nips/Tu0BK019,
+  author    = {Ruibo Tu and
+               Kun Zhang and
+               Bo C. Bertilson and
+               Hedvig Kjellstr{\"{o}}m and
+               Cheng Zhang},
+  editor    = {Hanna M. Wallach and
+               Hugo Larochelle and
+               Alina Beygelzimer and
+               Florence d'Alch{\'{e}}{-}Buc and
+               Emily B. Fox and
+               Roman Garnett},
+  title     = {Neuropathic Pain Diagnosis Simulator for Causal Discovery Algorithm
+               Evaluation},
+  booktitle = {Advances in Neural Information Processing Systems 32: Annual Conference
+               on Neural Information Processing Systems 2019, NeurIPS 2019, December
+               8-14, 2019, Vancouver, BC, Canada},
+  pages     = {12773--12784},
+  year      = {2019},
+  url       = {http://papers.nips.cc/paper/9440-neuropathic-pain-diagnosis-simulator-for-causal-discovery-algorithm-evaluation},
+  timestamp = {Tue, 01 Dec 2020 14:58:58 +0100},
+  biburl    = {https://dblp.org/rec/conf/nips/Tu0BK019.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@inproceedings{DBLP:conf/aistats/TuZAMKZ19,
+  author    = {Ruibo Tu and
+               Cheng Zhang and
+               Paul Ackermann and
+               Karthika Mohan and
+               Hedvig Kjellstr{\"{o}}m and
+               Kun Zhang},
+  editor    = {Kamalika Chaudhuri and
+               Masashi Sugiyama},
+  title     = {Causal Discovery in the Presence of Missing Data},
+  booktitle = {The 22nd International Conference on Artificial Intelligence and Statistics,
+               {AISTATS} 2019, 16-18 April 2019, Naha, Okinawa, Japan},
+  series    = {Proceedings of Machine Learning Research},
+  volume    = {89},
+  pages     = {1762--1770},
+  publisher = {{PMLR}},
+  year      = {2019},
+  url       = {http://proceedings.mlr.press/v89/tu19a.html},
+  timestamp = {Sun, 23 Jun 2019 08:14:06 +0200},
+  biburl    = {https://dblp.org/rec/conf/aistats/TuZAMKZ19.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{DBLP:conf/mlhc/HamesseTAKZ19,
+  author    = {Charles Hamesse and
+               Ruibo Tu and
+               Paul Ackermann and
+               Hedvig Kjellstr{\"{o}}m and
+               Cheng Zhang},
+  editor    = {Finale Doshi{-}Velez and
+               Jim Fackler and
+               Ken Jung and
+               David C. Kale and
+               Rajesh Ranganath and
+               Byron C. Wallace and
+               Jenna Wiens},
+  title     = {Simultaneous Measurement Imputation and Outcome Prediction for Achilles
+               Tendon Rupture Rehabilitation},
+  booktitle = {Proceedings of the Machine Learning for Healthcare Conference, {MLHC}
+               2019, 9-10 August 2019, Ann Arbor, Michigan, {USA}},
+  series    = {Proceedings of Machine Learning Research},
+  volume    = {106},
+  pages     = {614--640},
+  publisher = {{PMLR}},
+  year      = {2019},
+  url       = {http://proceedings.mlr.press/v106/hamesse19a.html},
+  timestamp = {Fri, 27 Nov 2020 15:17:46 +0100},
+  biburl    = {https://dblp.org/rec/conf/mlhc/HamesseTAKZ19.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
